Update footer link

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
          <!-- My profile-->
         <div class="my-5 py-5">
             <img src="./assets/profile.PNG" alt="profile-image" class="profile-image">
-            <h3 class="pt-5">Thank you for visiting.</h3>
-            <p>I am an iOS developer and now learning web development.</p>
+            <h3 class="pt-5">Thank you for visiting!</h3>
+            <p>I am an iOS developer and now learning full-stack development.</p>
         </div>
         <hr />
 
@@ -49,7 +49,7 @@
         <div class="contact">
             <h3>Get In Touch</h3>
             <h4 class="my-5">Do you have new project ideas in your mind?</h4>
-            <p class="contact-message">I love making ideas or images come into a real life. Let's create somthing cool!</p>
+            <p class="contact-message">I love making new ideas come into a real life. Let's create somthing cool!</p>
         </div>
     </body>
 
@@ -57,7 +57,7 @@
         <footer>
           <ul class="nav justify-content-center pb-3 mb-3">
             <li class="nav-item px-2"><a href="#">Home</a></li>
-            <li class="nav-item px-2"><a href="#">Features</a></li>
+            <li class="nav-item px-2"><a href="https://kayonakao.github.io/html-resume/">Back</a></li>
           </ul>
           <p class="text-center copy-right">© 2025 Nakao Kayo</p>
         </footer>
